-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: repo-valhalla
-
Component/s: hotspot
JDK-8174962 implemented receiver typechecks for invokeinterface within the templateTable. These checks come after the private method invocation logic, and rely on itable information that doesn't exist for private methods. There are also changes needed in the compilers and MethodHandles.