src/hotspot/cpu/s390/templateTable_s390.cpp
@@ -3617,28 +3617,38 @@ void TemplateTable::invokeinterface(int byte_no) {
 
   // Z_R14 (== Z_bytecode) : return entry
 
+  // First check for Object case, then private interface method,
+  // then regular interface method.
+
+  // Special case of invokeinterface called for virtual method of
+  // java.lang.Object. See cpCache.cpp for details.
+  NearLabel notObjectMethod, no_such_method;
+  __ testbit(flags, ConstantPoolCacheEntry::is_forced_virtual_shift);
+  __ z_brz(notObjectMethod);
+  invokevirtual_helper(method, receiver, flags);
+  __ bind(notObjectMethod);
+
   // Check for private method invocation - indicated by vfinal
-  Label notVFinal;
+  NearLabel notVFinal;
   __ testbit(flags, ConstantPoolCacheEntry::is_vfinal_shift);
   __ z_brz(notVFinal);
 
-  __ null_check(receiver);
+  // Get receiver klass into klass - also a null check.
+  __ load_klass(klass, receiver);
 
+  NearLabel subtype, no_such_interface;
+
+  __ check_klass_subtype(klass, interface, Z_tmp_2, Z_temp_3, subtype);
+  // If we get here the typecheck failed
+  __ z_bru(no_such_interface);
+  __ bind(subtype);
+
+  // do the call
   __ profile_final_call(Z_tmp_2);
   __ profile_arguments_type(Z_tmp_2, method, Z_ARG5, true);
   __ jump_from_interpreted(method, Z_tmp_2);
 
   __ bind(notVFinal);
-
-  // Special case of invokeinterface called for virtual method of
-  // java.lang.Object. See cpCacheOop.cpp for details.
-  // This code isn't produced by javac, but could be produced by
-  // another compliant java compiler.
-  NearLabel notMethod, no_such_interface, no_such_method;
-  __ testbit(flags, ConstantPoolCacheEntry::is_forced_virtual_shift);
-  __ z_brz(notMethod);
-  invokevirtual_helper(method, receiver, flags);
-  __ bind(notMethod);
 
   // Get receiver klass into klass - also a null check.
   __ restore_locals();
